demo/1.egress.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: egress
  labels:
    app: egress
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: egress
    spec:
      containers:
      - image: nginx
        name: egress
