demo/4.varnish.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: varnish
  labels:
    app: varnish
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: varnish
    spec:
      containers:
      - image: newsdev/varnish
        name: varnish
        volumeMounts:
        - name: config
          mountPath: /etc/varnish
      volumes:
        - name: config
          configMap:
            name: varnish-default-vcl
---
apiVersion: v1
kind: Service
metadata:
  name: varnish-upstream
  labels:
    app: varnish-upstream
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: egress
