demo/2.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress
spec:
  rules:
  - host: gluecon.com
    http:
      paths:
      - path: /
        backend:
          serviceName: ingress-upstream
          servicePort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: ingress-upstream
  labels:
    app: ingress-upstream
spec:
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: egress
